Updating case studies

--- a/rfs.html
+++ b/rfs.html
@@ -33,7 +33,7 @@
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
                   <div class="clearfix"></div>
-                  <li><a href="index.html">portfolio</a></li>
+                  <li><a href="index.html">select projects</a></li>
                   <li><a href="about.html">about</a></li>
                   <li><a href="contact.html">contact</a></li>
                   </a>
@@ -67,7 +67,7 @@
                     we needed a better understanding of the environment: who else was doing this?
                     How will we convince strangers to buy these shoes? Where should we market the new
                     site? And most importantly, how do we set ourselves up to compete?</p>
-                  <img src="images/etsy-rfs.png" class="full">
+                      <img src="images/etsy-rfs.png" class="more-full">
               </div>
           </section>
           <section class="competition">
@@ -168,6 +168,7 @@
                     through word-of-mouth. Accordingly, I designed the below user flow to
                     reflect the journey the shopper will take once they click on that link.</p>
                   <img src="images/rfs-user-flows.png" class="full">
+                  <button>see more user flows</button>
               </div>
             </div>
           </section>
@@ -175,7 +176,12 @@
               <div id="container">
                   <h2>translating to web</h2>
                   <h3>Sketching to Lo-Fi</h3>
-                  <img src="images/prototypes.png" class="more-full">
+                  <div class="sketch-img">
+                      <img src="images/rfs-home-sketch.png" class="more-full">
+                      <img src="images/rfs-shop-browse.png" class="more-full">
+                      <img src="images/rfs-shoe-detail.png" class="more-full">
+                      <div class="clearfix"></div>
+                  </div>
               </div>
           </section>
           <section class="branding">
@@ -195,7 +201,7 @@
                   </div>
                   <div class="branding-section">
                       <h3>Colors</h3>
-                      <div class="color-samples">
+                      <div class="colors">
                           <ul class="images">
                               <li><img src="images/001.png" class="third"></li>
                               <li><img src="images/002.png" class="third"></li>
@@ -222,16 +228,16 @@
               </div>
           </section>
           <section class="prototype">
-              <div class="prototype-container">
+              <div id="container">
                   <h2>prototype</h2>
                   <!-- insert video -->
                   <div class="user-feedback">
                       <h3>User Feedback</h3>
                           <div class="quotes">
-                              <p class="first">"Nice layout, clean crisp lines. [I] like the color scheme."</p>
-                              <p class="second">“Love the concept. Everyone loves to have originality in their style.”</p>
+                              <h4>"Nice layout, clean crisp lines. [I] like the color scheme."</h4>
+                              <!--<p class="second">“Love the concept. Everyone loves to have originality in their style.”</p>-->
                           </div>
-                      <div class="clearfix"></div>
+                      <div class="clearfix"></div> <!--include the test results and changes-->
                       <p>We conducted multiple rounds of guerilla testing and online user testing
                       through Invision. Overall, we received positive feedback on the shoes and
                       the website. Survey respondents were intrigued by the concept and the
@@ -277,7 +283,7 @@
           </section>
 
           <section class="conclusion">
-              <div class="conclusion-container">
+              <div id="container">
                   <h2>what i learned from this experience</h2>
                   <p>In retail, photography is just as important as the site design.
                     To dispel concerns of condition and quality, the users requested
@@ -301,7 +307,7 @@
           </section>
 
           <section id="contact">
-              <div class="contact-container">
+              <div id="container">
                   <div class="contact-text">
                       <h2>If you’d like to get in touch to work or just chat about
                         all things design & milan</h2>
