--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i></a>
                   <div class="clearfix"></div>
-                  <li><a href="index.html">portfolio</a></li>
+                  <li><a data-scroll="" href="./#projects">portfolio</a></li>
                   <li><a href="about.html">about</a></li>
-                  <!--<li><a href="contact.html">contact</a></li>-->
+                  <li><a data-scroll="" href="./#contact">contact</a></li>
                   </a>
               </ul>
           </nav>
