updated case studies

--- a/coop.html
+++ b/coop.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" type="text/css" href="styles/case-study.css">
      <link rel="stylesheet" type="text/css" href="styles/coop.css">
      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
      <script src="javascript/script.js"></script>
      <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
@@ -46,24 +46,28 @@
           </section>
       </header>
       <main>
-          <div class="hero-text">
-              <h1>standing out in a crowded room</h1>
-              <p>COOP is a SaaS web application which allows people to collect information and
-                store it in a single place. A person can create simple documents, store images,
-                links to websites, and collaborate with others. Originally named blocbox, we
-                rebranded the company with a new website and brand.
-              <p>COOP was a project under the Bloc certification course. It is not a functioning website.
-              </p>
-              <a href="#"><button class="case-study-button">view prototype</button></a>
-          </div>
+          <section class="introduction">
+              <div id="container">
+                  <h1>standing out in a crowded room</h1>
+                  <p>COOP is a SaaS web application which allows people to collect information and
+                    store it in a single place. A person can create simple documents, store images,
+                    links to websites, and collaborate with others. Originally named blocbox, we
+                    rebranded the company with a new website and brand.
+                  <p>COOP was a project under the Bloc certification course. It is not a functioning website.
+                  </p>
+                  <a href="#"><button class="case-study-button">view prototype</button></a>
+              </div>
+          </section>
           <section class="intro">
-              <div class="intro-text">
+              <div id="container">
                   <h2>a new set of wings</h2>
                   <p>The goal was to rebrand blocbox from an office tool into software that
                     would be used beyond the cubical. </p>
                   <img src="images/blocbox-coop.png" class="full">
               </div>
-              <div class="competition">
+          </section>
+          <section class="competition">
+              <div id="container">
                   <h3>Who's Out There?</h3>
                   <p>Since there are quite a few similar services out there, we
                     focused on three similar competitors: box, Google Drive, and Dropbox.
@@ -80,18 +84,22 @@
                   <p>Blocbox is also targeting individuals and businesses. Our goal
                     was to stand out by taking a more playful approach.</p>
               </div>
+          </section>
+          <section>
               <div class="user-research">
-                  <h3>But first, what do the people want?</h3>
-                  <p>I conducted a survey to better understand our potential users.
-                    Looking what devices they use, how and what they save, and where,
-                    I was able to pick up on minor annoyances and complaints regarding
-                    our competitors, allowing me to identify challenges and potential
-                    solutions to test. The respondents, while sharing challenges, also
-                    proposed solutions. Solutions that we could test through the rebrand.</p>
+                  <div id="container">
+                      <h3>But first, what do the people want?</h3>
+                      <p>I conducted a survey to better understand our potential users.
+                        Looking what devices they use, how and what they save, and where,
+                        I was able to pick up on minor annoyances and complaints regarding
+                        our competitors, allowing me to identify challenges and potential
+                        solutions to test. The respondents, while sharing challenges, also
+                        proposed solutions. Solutions that we could test through the rebrand.</p>
+                  </div>
               </div>
           </section>
           <section class="environment">
-              <div class="environment-container">
+              <div id="container">
                   <div class="clearfix"></div>
                   <div class="first">
                       <h3>Challenges</h3>
@@ -113,7 +121,7 @@
               </div>
           </section>
           <section class="users">
-              <div class="users-container">
+              <div id="container">
                   <h3>Who Are They?</h3>
                   <div class="user-boxes">
                       <div class="john">
@@ -148,11 +156,11 @@
               </div>
           </section>
           <section class="info-arch">
-              <div class="info-arch-container">
-                  <h2>information architecture</h2>
-                  <h3>Mapping</h3>
-                  <div class="clearfix"></div>
-                  <div class="mapping-img">
+              <div id="container">
+                  <div class="mapping">
+                      <h2>information architecture</h2>
+                      <h3>Mapping</h3>
+                      <div class="clearfix"></div>
                       <img src="images/coop-flow1.png" class="first" id="smaller">
                       <img src="images/coop-flow2.png" class="second">
                   </div>
@@ -169,32 +177,47 @@
               </div>
           </section>
           <section class="sketch">
-              <div class="sketching">
+              <div id="container">
                   <h2>iterations & wireframes</h2>
                   <h3>Sketching to Lo-Fi</h3>
                   <img src="images/coop-sketches.png" class="more-full">
               </div>
           </section>
           <section class="branding">
-              <div class="branding-container">
-                  <div class="case-logos">
+              <div id="container">
+                  <div class="branding-section">
                       <h2>branding</h2>
                       <img src="images/coop-logo-form.png" class="more-full">
                       <!---
                       <h3>Logo Formation</h3>
                       <img src="images/coop-logofinalists.png" class="coop-logo-formation">
-                  </div> -->
-                  <div class="case-logos">
-                      <h3>Logo & Icons</h3>
-                      <div class="final-logos">
-                          <img src="images/coop-logo.png" class="first">
-                          <img src="images/coop-icons.png" class="second">
-                          <div class="clearfix"></div>
+                  -->
+                  </div>
+                  <div class="branding-section">
+                      <div class="first">
+                          <h3>Logo & Icons</h3>
+                          <div class="final-logos">
+                              <img src="images/coop-logo.png" class="first">
+                              <img src="images/coop-icons.png" class="second">
+                              <div class="clearfix"></div>
+                          </div>
+                      </div>
+                      <div class="second">
+                          <div class="type">
+                              <h3>Typography</h3>
+                              <ul class="type-fonts">
+                                  <li><span class="h1">H1 Nunito</span></li>
+                                  <li><span class="h2">H2 Nunito</span></li>
+                                  <li><span class="h3">H3 Nunito</span></li>
+                                  <li><span class="body">Body Lora</span></li>
+                              </ul>
+                              <div class="clearfix"></div>
+                          </div>
                       </div>
                   </div>
-                  <div class="colors">
+                  <div class="branding-section">
                       <h3>Colors</h3>
-                      <div class="color-samples">
+                      <div class="colors">
                           <ul class="images">
                               <li><img src="images/coop-color1.png" class="third"></li>
                               <li><img src="images/coop-color2.png" class="third"></li>
@@ -204,22 +227,13 @@
                               <li><img src="images/coop-color6.png" class="third"></li>
                           </ul>
                       </div>
+                      <div class="clearfix"></div>
                   </div>
-                  <div class="other-branding">
-                      <div class="type">
-                          <h3>Typography</h3>
-                          <ul class="type-fonts">
-                              <li><span class="h1">H1 Nunito</span></li>
-                              <li><span class="h2">H2 Nunito</span></li>
-                              <li><span class="h3">H3 Nunito</span></li>
-                              <li><span class="body">Body Lora</span></li>
-                          </ul>
-                      </div>
-                  </div>
+
               </div>
           </section>
           <section class="prototype">
-              <div class="prototype-container">
+              <div id="container">
                   <h2>prototype</h2>
                   <!--
                   <h3>User Feedback</h3>
@@ -230,12 +244,12 @@
                           </div>
                           <p></p>
                       </div> -->
-                  <div class="landing-page">
+                  <div class="prototype-page">
                       <h3>Landing Page</h3>
                       <img src="images/coop-landing.png" class="full">
                       <div class="clearfix"></div>
                   </div>
-                  <div class="onboarding-page">
+                  <div class="prototype-page">
                       <h3>User Onboarding</h3>
                       <p>The user onboarding and sign-in sections are simple and similar.
                         We made it easy to sign up or log in through social network sites.</p>
@@ -245,12 +259,12 @@
                           <div class="clearfix"></div>
                       </div>
                   </div>
-                  <div class="dashboard-page">
+                  <div class="prototype-page">
                       <h3>Dashboard</h3>
                       <img src="images/coop-dash.png" class="full">
                       <div class="clearfix"></div>
                   </div>
-                  <div class="membership-page">
+                  <div class="prototype-page">
                       <h3>Membership</h3>
                       <ul class="prototype-images">
                           <li><img src="images/coop-profile.png" class="third"></li>
@@ -259,7 +273,7 @@
                           <div class="clearfix"></div>
                       </ul>
                   </div>
-                  <div class="content-page">
+                  <div class="prototype-page">
                       <h3>Adding content</h3>
                       <p>To add content, the user will click on the “Add +” call to action.
                         Once clicked, modal windows will appear. Users have a choice of
@@ -275,7 +289,7 @@
           </section>
 
           <section class="conclusion">
-              <div class="conclusion-container">
+              <div id="container">
                   <h2>what i learned from this experience</h2>
                   <p>Dashboards are very personal. Most users wanted the ability to
                     customize how it looked - colors and background.
@@ -289,7 +303,7 @@
           <section class="navigation">
               <div class="arrows">
                   <a href="index.html"><img src="images/previous.png" class="left"></a>
-                  <a href="coop.html"><img src="images/next.png" class="right"></a>
+                  <a href="rfs.html"><img src="images/next.png" class="right"></a>
               </div>
               <div class="case-studies">
                   <a href="rfs.html"><img src="images/rfs-laptop.png" class="first"></a>
@@ -298,7 +312,7 @@
           </section>
 
           <section id="contact">
-              <div class="contact-container">
+              <div id="container">
                   <div class="contact-text">
                       <h2>If you’d like to get in touch to work or just chat about
                         all things design & milan</h2>
