--- a/rfs.html
+++ b/rfs.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" type="text/css" href="styles/case-study.css">
    <link rel="stylesheet" type="text/css" href="styles/rfs.css">
    <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
    <script src="javascript/script.js"></script>
    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
@@ -33,7 +33,7 @@
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
                   <div class="clearfix"></div>
-                  <li><a href="index.html">select projects</a></li>
+                  <li><a href="index.html">portfolio</a></li>
                   <li><a href="about.html">about</a></li>
                   <li><a href="contact.html">contact</a></li>
                   </a>
@@ -168,7 +168,7 @@
                     through word-of-mouth. Accordingly, I designed the below user flow to
                     reflect the journey the shopper will take once they click on that link.</p>
                   <img src="images/rfs-user-flows.png" class="full">
-                  <button>see more user flows</button>
+                  <button>view user flows</button>
               </div>
             </div>
           </section>
@@ -246,12 +246,12 @@
                       the design. This was alleviated by providing additional information on the
                       dyeing process and on the specific shoes that are being sold.</p>
                   </div>
-                  <div class="landing-page">
+                  <div class="prototype-page">
                       <h3>Landing Page</h3>
                       <img src="images/homepage.png" class="full">
                       <div class="clearfix"></div>
                   </div>
-                  <div class="about-page">
+                  <div class="prototype-page">
                       <h3>About, Contact, FAQ</h3>
                       <ul class="prototype-images">
                           <li><img src="images/about-refated.png" class="third"></li>
@@ -261,7 +261,7 @@
                       </ul>
 
                   </div>
-                  <div class="purchasing-page">
+                  <div class="prototype-page">
                       <h3>Purchasing Flow</h3>
                       <ul class="prototype-images">
                           <li><img src="images/rfs-detail.png" class="third"></li>
@@ -271,7 +271,7 @@
                       </ul>
                       <div class="clearfix"></div>
                   </div>
-                  <div class="membership-page">
+                  <div class="prototype-page">
                       <h3>Membership</h3>
                       <p class="user-feedback">Darcy’s goal is to include membership services once he builds a
                         larger following. So, we planned for the future and designed an
