updating case studies

--- a/coop.html
+++ b/coop.html
@@ -161,17 +161,18 @@
                       <h2>information architecture</h2>
                       <h3>Mapping</h3>
                       <div class="clearfix"></div>
-                      <img src="images/coop-flow1.png" class="first" id="smaller">
-                      <img src="images/coop-flow2.png" class="second">
+                      <img src="images/coop-sitemap.png" class="full">
                   </div>
                   <div class="clearfix"></div>
                   <div class="mapping">
                       <h3>Flows</h3>
                       <div class="clearfix"></div>
                       <div class="mapping-img">
-                          <img src="images/coop-flow3.png" class="first">
+                          <img src="images/coop-flow2.png" class="first">
                           <img src="images/coop-flow4.png" class="second">
+                          <div class="clearfix"></div>
                       </div>
+                      <button>view more flows</button>
                   </div>
                   <div class="clearfix"></div>
               </div>
@@ -306,8 +307,8 @@
                   <a href="rfs.html"><img src="images/next.png" class="right"></a>
               </div>
               <div class="case-studies">
-                  <a href="rfs.html"><img src="images/rfs-laptop.png" class="first"></a>
-                  <a href="coop.html"><img src="images/coop-laptop.png" class="second"></a>
+                  <a href="coop.html"><img src="images/coop-laptop.png" class="first"></a>
+                  <a href="rfs.html"><img src="images/rfs-laptop.png" class="second"></a>
               </div>
           </section>
 
