--- a/rfs.html
+++ b/rfs.html
@@ -168,7 +168,7 @@
                     through word-of-mouth. Accordingly, I designed the below user flow to
                     reflect the journey the shopper will take once they click on that link.</p>
                   <img src="images/rfs-user-flows.png" class="full">
-                  <button>view user flows</button>
+                  <button>view more flows</button>
               </div>
             </div>
           </section>
@@ -181,6 +181,27 @@
                       <img src="images/rfs-shop-browse.png" class="more-full">
                       <img src="images/rfs-shoe-detail.png" class="more-full">
                       <div class="clearfix"></div>
+                  </div>
+                  <div class="user-test">
+                          <div class="clearfix"></div>
+                          <h3>user testing: lo-fi prototype</h3>
+                          <div class="first">
+                              <h4>Positives</h4>
+                              <ul class="survey">
+                                  <li><p>Seemed easy to click through. One person had trouble viewing her cart after she added an item.</p></li>
+                                  <li><p>Clean setup</p></li>
+                              </ul>
+                          </div>
+                          <div class="second">
+                              <h4>Suggestions</h4>
+                                  <ul class="survey">
+                                      <li><p>Include questions in the FAQ rather than just answers</p></li>
+                                      <li><p>Add the shoe size to product detail</p></li>
+                                      <li><p>Add more to the about section</p></li>
+                                      <li><p>Consider a before/after photo of shoes</p></li>
+                                  </ul>
+                          </div>
+                          <div class="clearfix"></div>
                   </div>
               </div>
           </section>
@@ -233,18 +254,35 @@
                   <!-- insert video -->
                   <div class="user-feedback">
                       <h3>User Feedback</h3>
-                          <div class="quotes">
+                          <!--<div class="quotes">
                               <h4>"Nice layout, clean crisp lines. [I] like the color scheme."</h4>
                               <!--<p class="second">“Love the concept. Everyone loves to have originality in their style.”</p>-->
-                          </div>
                       <div class="clearfix"></div> <!--include the test results and changes-->
-                      <p>We conducted multiple rounds of guerilla testing and online user testing
-                      through Invision. Overall, we received positive feedback on the shoes and
-                      the website. Survey respondents were intrigued by the concept and the
-                      entrepreneur, while others were keen to order shoes from the prototype.
-                      Negative comments were mostly directed towards the concept, rather than
-                      the design. This was alleviated by providing additional information on the
-                      dyeing process and on the specific shoes that are being sold.</p>
+                      <p>We conducted multiple rounds of online and guerilla testing. Below are our major findings:</p>
+                      <div class="user-test">
+                              <div class="clearfix"></div>
+                              <div class="first">
+                                  <h4>Positives</h4>
+                                  <ul class="survey">
+                                      <li><p>Nice, good looking products</p></li>
+                                      <li><p>Color and layout</p></li>
+                                      <li><p>Checkout process is standard</p></li>
+                                      <li><p>Functionality works well</p></li>
+                                      <li><p>"All the stuff you expect to see" on a retail site</p></li>
+                                      <li><p>Respondents understood what the site was selling</p></li>
+                                  </ul>
+                              </div>
+                              <div class="second">
+                                  <h4>Suggestions</h4>
+                                      <ul class="survey">
+                                          <li><p>Highlight the process of the shoes more to show that it’s not your average retail site</p></li>
+                                          <li><p>"Why is there a quantity button if each shoe is unique?"</p></li>
+                                          <li><p>Add a way to remove something from the cart</p></li>
+                                          <li><p>Font size seems too large</p></li>
+                                      </ul>
+                              </div>
+                              <div class="clearfix"></div>
+                      </div>
                   </div>
                   <div class="prototype-page">
                       <h3>Landing Page</h3>
